fixed alignment of attributions

--- a/app.css
+++ b/app.css
@@ -100,9 +100,9 @@
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
     .attributions .attribution {
-      width: 201px;
+      width: 189px;
       margin-top: 136px;
-      margin-right: 12px;
+      margin-right: 24px;
       font-size: 16px;
       line-height: 1.4; } }
 
